figure out table css on home page

--- a/games/21midweek.html
+++ b/games/21midweek.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>National Results</title>
+  <title>Fortune Results</title>
   <link rel="stylesheet" href="/styles/tableStyles.css" />
 </head>
 <body>
