--- a/index.html
+++ b/index.html
@@ -3,11 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <title>Visual Lotto Board</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- <link rel="stylesheet" href="/styles/tableStyles.css" /> -->
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="/styles/tableStyles.css" />
   
 </head>
 <body>
+   <header id="homePageHeader">
+      <div class="brand">
+         <img src="https://res.cloudinary.com/ddatfadov/image/upload/v1749649983/VLB_logo_gpiyzr.png" alt="Logo" width="40"/>
+         <h1>Visual Lotto Board</h1>
+      </div>
+
+      <div class="actions">
+         <button id="subscribeBtn">📬 Subscribe</button>
+         <button id="loginBtn">🔐 Login</button>
+         <button id="reportBtn">📄 Report</button>
+      </div>
+
+  <div class="socials">
+    <!-- <a href="https://twitter.com/yourhandle" target="_blank">🐦</a>
+    <a href="https://facebook.com/yourpage" target="_blank">📘</a>
+    <a href="https://instagram.com/yourhandle" target="_blank">📸</a> -->
+    <a class="media" href="https://twitter.com/visuaLottoBoard" target="_blank" aria-label="connect on our X Page" rel="no-referrer">
+                    <i class="fa-brands fa-x-twitter" ></i>
+                  </a>
+                  <a class="media" href="https://www.facebook.com/visuaLottoBoard" target="_blank">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a class="media" href="https://m.me/109930914660224" target="_blank">
+                    <i class="fa-brands fa-facebook-messenger"></i>
+                  </a>
+                  <a class="media" href="#">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                  <a class="media" href="http://www.youtube.com/@VisuaLottoBoard" target="_blank">
+                    <i class="fa-brands fa-youtube"></i>
+                  </a>
+  </div>
+</header>
+
   <nav id="subnav"></nav>
 
   <div id="statusMessage">Loading results. Please wait...</div>
