--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Visual Lotto Board</title>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Visual Lotto Board</title>
 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="style.css">
@@ -20,44 +21,45 @@
    </script>
 </head>
 <body>
-   <header id="homePageHeader">
+   <header class="home-page-header" id="homePageHeader">
       <div class="brand">
          <img src="https://res.cloudinary.com/ddatfadov/image/upload/v1749649983/VLB_logo_gpiyzr.png" alt="Logo" width="40"/>
          <h1>Visual Lotto Board</h1>
       </div>
 
       <div class="actions">
-         <button id="subscribeBtn">📬 Subscribe</button>
-         <button id="loginBtn">🔐 Login</button>
-         <button id="reportBtn">📄 Report</button>
+         <button class="sub-btn" id="subscribeBtn">📬 Subscribe</button>
+         <button class="login-btn" id="loginBtn">🔐 Login</button>
+         <button class="report-btn" id="reportBtn">📄 Report</button>
       </div>
 
-   <div class="socials">
-    <!-- <a href="https://twitter.com/yourhandle" target="_blank">🐦</a>
-    <a href="https://facebook.com/yourpage" target="_blank">📘</a>
-    <a href="https://instagram.com/yourhandle" target="_blank">📸</a> -->
-         <a class="media" href="https://twitter.com/visuaLottoBoard" target="_blank" aria-label="connect on our X Page" rel="no-referrer">
+      <div class="socials">
+         <a class="media" href="https://twitter.com/visuaLottoBoard" target="_blank" aria-label="connect with us  on our X account" rel="no-referrer">
             <i class="fa-brands fa-x-twitter" ></i>
          </a>
-         <a class="media" href="https://www.facebook.com/visuaLottoBoard" target="_blank">
+         <a class="media" href="https://www.facebook.com/visuaLottoBoard" target="_blank" aria-label="connect with us on our facebook account">
             <i class="fa-brands fa-facebook-f"></i>
          </a>
-         <a class="media" href="https://m.me/109930914660224" target="_blank">
+         <a class="media" href="https://m.me/109930914660224" target="_blank" aria-label="connect with us on our facebook-messenger">
             <i class="fa-brands fa-facebook-messenger"></i>
          </a>
          <a class="media" href="#">
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-instagram" aria-label="connect with us on our IG story"></i>
          </a>
-         <a class="media" href="http://www.youtube.com/@VisuaLottoBoard" target="_blank">
+         <a class="media" href="http://www.youtube.com/@VisuaLottoBoard" target="_blank" aria-label="catch our videos on youtube">
             <i class="fa-brands fa-youtube"></i>
          </a>
       </div>
    </header>
 
-   <nav id="subnav"></nav>
+   <nav class="subnav" id="subnav">
+      <a  class="counterpart" href="https://lottoclassificationchart.visuallottoboard.com/" target="_blank">Classification chart</a>
+   </nav>
 
-   <div id="statusMessage">Loading results. Please wait...</div>
-   <main id="homePageContainer"></main>
+   
+
+   <div class="status-message" id="statusMessage">Loading results. Please wait...</div>
+   <main class="home-page-main" id="homePageContainer"></main>
 
    <div id="reportModal" class="modal hidden">
       <div class="modal-content">
@@ -75,12 +77,11 @@
          <textarea id="reportMessage" placeholder="Describe the issue you encountered..."></textarea>
 
          <div class="modal-actions">
-            <button id="sendReportBtn">Submit Report</button>
-            <button id="closeModalBtn">Cancel</button>
+            <button class="send-report-btn" id="sendReportBtn">Submit Report</button>
+            <button class="close-modal-btn" id="closeModalBtn">Cancel</button>
          </div>
       </div>
    </div>
-
 
    <script type="module" src="/scripts/homeInit.js"></script>
    <script src="/scripts/modal.js"></script>
