added open graph to home page

--- a/games/1diamond.html
+++ b/games/1diamond.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Diamond Results</title>
+  <meta name="description" content="Live draw results for Diamond lotto game. Updated weekly via Visual Lotto Board.">
   <!-- <link rel="stylesheet" href="/styles/tableStyles.css" /> -->
 </head>
 <body>
