--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
 <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Visual Lotto Board</title>
+   <title>Baba Ijebu Lotto Results | Visual Lotto Board</title>
+   <meta name="description" content="View updated lotto results from 25 games including Diamond, Peoples, Bingo, Jackpot, Super, National, and more. Powered by Visual Lotto Board.">
+   <meta name="author" content="Visual Lotto Result" />
+
+   <meta property="og:title" content="Baba Ijebu Lotto Results | Visual Lotto Board">
+   <meta property="og:description" content="View updated lotto results from 25 games including Diamond, Peoples, Bingo, JAckpot, Super, National, and more. Powered by Visual Lotto Board."> 
+   <!-- <meta property="og:image" content="https://i.postimg.cc/Dy4xvhtg/Visual-Lotto-Board-preview-1.png">  -->
+   <!-- <meta property="og:image:alt" content="Visual Lotto Baord logo, name and picture of game available on the webpage">  -->
+   <!-- <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/"> -->
+
+            <!-- twitter-->
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:site" content="@VisuaLottoBoard">
+   <meta name="twitter:title" content="Baba Ijebu Lotto Results | Visual Lotto Board">
+   <meta name="twitter:description" content="View updated lotto results from 25 games including Diamond, Peoples, Bingo, JAckpot, Super, National, and more. Powered by Visual Lotto Board.">
+   <!-- <meta name="twitter:image" content="https://i.postimg.cc/Dy4xvhtg/Visual-Lotto-Board-preview-1.png"> -->
+   <!-- <meta name="twitter:url" content="https://vlb.hologutibusinesscentre.com/"> -->
+
+   <link rel="icon" href="favicon.ico" type="image/x-icon">
+   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+   <link rel="manifest" href="site.webmanifest">
 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="style.css">
@@ -23,7 +45,9 @@
 <body>
    <header class="home-page-header" id="homePageHeader">
       <div class="brand">
-         <img src="https://res.cloudinary.com/ddatfadov/image/upload/v1749649983/VLB_logo_gpiyzr.png" alt="Logo" width="40"/>
+         <a href="#" aria-current="page">
+            <img src="https://res.cloudinary.com/ddatfadov/image/upload/v1749649983/VLB_logo_gpiyzr.png" alt="Logo" width="40"/>
+         </a>
          <h1>Visual Lotto Board</h1>
       </div>
 
