styling mobile view

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
    </header>
 
    <nav class="subnav" id="subnav">
-      <a  class="counterpart" href="https://lottoclassificationchart.visuallottoboard.com/" target="_blank">Classification chart</a>
+      <a  class="counterpart" href="https://lottoclassificationchart.visuallottoboard.com/" target="_blank">
+         <p class="counterpart-span">Classification chart</p>
+      </a>
    </nav>
 
    
