--- a/index.html
+++ b/index.html
@@ -79,7 +79,52 @@
    <nav class="subnav" id="subnav">
       <a  class="counterpart" href="https://lottoclassificationchart.visuallottoboard.com/" target="_blank">
          <p class="counterpart-span">Classification chart</p>
+         <img class="counterpart-icon" src="assets/counterpart.ico" alt="" width="">
       </a>
+
+      <div class="game-nav-link-wrapper">
+         <!-- <a class="game-nav-link" href="/games/1diamond.html">
+            <img src="assets/iPhone (1).ico" alt="" width="32">
+            Diamond
+         </a>
+           <a class="game-nav-link" href="/games/25aseda.html">
+               <img src="assets/iPhone (1).ico" alt="" width="32">
+               International
+         </a>
+          <a class="game-nav-link" href="/games/18msp.html">
+                        <img src="assets/iPhone (1).ico" alt="" width="32">
+
+            MSP
+         </a>
+          <a class="game-nav-link" href="/games/19lucky-g.html">
+                        <img src="assets/iPhone (1).ico" alt="" width="32">
+
+            <span>Lucky-G</span>
+         </a>
+          <a class="game-nav-link" href="/games/20midweek.html">
+                        <img src="assets/iPhone (1).ico" alt="" width="32">
+
+            <span>Midweek</span>
+         </a> -->
+          <a class="game-nav-link fortune" href="/games/21fortune.html">
+            <img src="Screenshot 2025-06-28 095659.png" alt="" width="150" height="200">
+            <span>Fortune</span>
+         </a>
+         <a class="game-nav-link fortune" href="/games/21fortune.html">
+            <img src="Screenshot 2025-06-28 095659.png" alt="" width="150" height="200">
+            <span>Fortune</span>
+         </a>
+          <!-- <a class="game-nav-link" href="/games/22bonanza.html">
+            <span>Bonanza</span>
+         </a>
+          <a class="game-nav-link" href="/games/24national.html">
+            <span>National</span>
+         </a>
+          <a class="game-nav-link" href="/games/25aseda.html">
+            <span>Aseda</span>
+         </a> -->
+      </div>
+     
    </nav>
 
    
