Try full phone image

--- a/index.html
+++ b/index.html
@@ -106,12 +106,16 @@
 
             <span>Midweek</span>
          </a> -->
-          <a class="game-nav-link fortune" href="/games/21fortune.html">
+          <!-- <a class="game-nav-link fortune" href="/games/21fortune.html">
             <img src="Screenshot 2025-06-28 095659.png" alt="" width="150" height="200">
             <span>Fortune</span>
          </a>
          <a class="game-nav-link fortune" href="/games/21fortune.html">
             <img src="Screenshot 2025-06-28 095659.png" alt="" width="150" height="200">
+            <span>Fortune</span>
+         </a> -->
+          <a class="game-nav-link fortune" href="/games/21fortune.html">
+            <img src="iPhone-12-PRO-vlb.hologutibusinesscentre.com (3).png" alt="">
             <span>Fortune</span>
          </a>
           <!-- <a class="game-nav-link" href="/games/22bonanza.html">
