--- a/games/18msp.html
+++ b/games/18msp.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Fortune Results</title>
+  <title>Monday Special Results - BabaIjebu</title>
   <link rel="stylesheet" href="/styles/tableStyles.css" />
 </head>
 <body>
