--- a/games/19lucky-g.html
+++ b/games/19lucky-g.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Fortune Results</title>
+  <title>Lucky-G Results - BabaIjebu</title>
   <link rel="stylesheet" href="/styles/tableStyles.css" />
 </head>
 <body>
