--- a/games/1diamond.html
+++ b/games/1diamond.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Diamond Results</title>
+  <title>Diamond Results - BabaIjebu</title>
+  
   <meta name="description" content="Live draw results for Diamond lotto game. Updated weekly via Visual Lotto Board.">
-  <!-- <link rel="stylesheet" href="/styles/tableStyles.css" /> -->
+  <link rel="stylesheet" href="/styles/tableStyles.css" />
 </head>
 <body>
   <nav id="subnav"></nav>
