--- a/games/21fortune.html
+++ b/games/21fortune.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Fortune Results</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Fortune Results - BabaIjebu</title>
+
   <link rel="stylesheet" href="/styles/tableStyles.css" />
 </head>
 <body>
