--- a/games/22bonanza.html
+++ b/games/22bonanza.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Fortune Results</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Bonanza Results - BabaIjebu </title>
   <link rel="stylesheet" href="/styles/tableStyles.css" />
 </head>
 <body>
