--- a/games/24national.html
+++ b/games/24national.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>National Results</title>
+  <title>National Results - BabaIjebu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="/styles/tableStyles.css" />
 </head>
 <body>
