fixing duplicate test image

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
           <a class="game-nav-link" href="/games/25aseda.html">
             <span>Aseda</span>
          </a>
-         <a class="game-nav-link text" href="/games/25aseda.html">
+         <a class=" text" href="/games/25aseda.html">
             <img src="iPhone-12-PRO-vlb.hologutibusinesscentre.com (3).png" alt="">
 
-            <span>Aseda</span>
+            <span>test</span>
          </a>
       </div>
    </nav>
