remove test from view

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
           <a class="game-nav-link" href="/games/25aseda.html">
             <span>Aseda</span>
          </a>
-         <a class=" text" href="/games/25aseda.html">
+         <!-- <a class=" text" href="/games/25aseda.html">
             <img src="iPhone-12-PRO-vlb.hologutibusinesscentre.com (3).png" alt="">
 
             <span>test</span>
-         </a>
+         </a> -->
       </div>
    </nav>
 
