comment out fortune image

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
          </a>
        
           <a class="game-nav-link fortune" href="/games/21fortune.html">
-            <img src="iPhone-12-PRO-vlb.hologutibusinesscentre.com (3).png" alt="">
+            <!-- <img src="iPhone-12-PRO-vlb.hologutibusinesscentre.com (3).png" alt=""> -->
             <span>Fortune</span>
          </a>
          <a class="game-nav-link" href="/games/22bonanza.html">
