added opengraph img to meta

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
    <meta property="og:title" content="Baba Ijebu Lotto Results | Visual Lotto Board">
    <meta property="og:description" content="View updated lotto results from 25 games including Diamond, Peoples, Bingo, JAckpot, Super, National, and more. Powered by Visual Lotto Board."> 
-   <!-- <meta property="og:image" content="https://i.postimg.cc/Dy4xvhtg/Visual-Lotto-Board-preview-1.png">  -->
-   <!-- <meta property="og:image:alt" content="Visual Lotto Baord logo, name and picture of game available on the webpage">  -->
-   <!-- <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/"> -->
+   <meta property="og:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1751113131/vlb-v2-free-user-cover_fsl1sl.png"> 
+   <meta property="og:image:alt" content="Visual Lotto Baord logo, name and picture of game available on the webpage"> 
+   <meta  property="og:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/">
 
             <!-- twitter-->
    <meta name="twitter:card" content="summary_large_image">
    <meta name="twitter:site" content="@VisuaLottoBoard">
    <meta name="twitter:title" content="Baba Ijebu Lotto Results | Visual Lotto Board">
    <meta name="twitter:description" content="View updated lotto results from 25 games including Diamond, Peoples, Bingo, JAckpot, Super, National, and more. Powered by Visual Lotto Board.">
-   <!-- <meta name="twitter:image" content="https://i.postimg.cc/Dy4xvhtg/Visual-Lotto-Board-preview-1.png"> -->
-   <!-- <meta name="twitter:url" content="https://vlb.hologutibusinesscentre.com/"> -->
+   <meta name="twitter:image" content="https://res.cloudinary.com/ddatfadov/image/upload/v1751113131/vlb-v2-free-user-cover_fsl1sl.png">
+   <meta name="twitter:url" content="https://premier-lotto-babaijebu-results.visuallottoboard.com/">
 
    <link rel="icon" href="favicon.ico" type="image/x-icon">
    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
