--- a/games/20midweek.html
+++ b/games/20midweek.html
@@ -5,9 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Midweek Results - BabaIjebu</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="/styles/tableStyles.css" />
+
 </head>
 <body>
+  <header class="home-page-header" id="homePageHeader">
+      <div class="brand">
+         <a href="/" aria-current="page">
+            <img src="https://res.cloudinary.com/ddatfadov/image/upload/v1749649983/VLB_logo_gpiyzr.png" alt="Logo" width="40"/>
+         </a>
+
+         <h1>Visual Lotto Board</h1>
+         </div>
+
+      <div class="actions">
+         <button class="sub-btn" id="subscribeBtn">📬 Subscribe</button>
+         <button class="login-btn" id="loginBtn">🔐 Login</button>
+         <button class="report-btn" id="reportBtn">📄 Report</button>
+      </div>
+
+      <div class="socials">
+         <a class="media" href="https://twitter.com/visuaLottoBoard" target="_blank" aria-label="connect with us  on our X account" rel="no-referrer">
+            <i class="fa-brands fa-x-twitter" ></i>
+         </a>
+         <a class="media" href="https://www.facebook.com/visuaLottoBoard" target="_blank" aria-label="connect with us on our facebook account">
+            <i class="fa-brands fa-facebook-f"></i>
+         </a>
+         <a class="media" href="https://m.me/109930914660224" target="_blank" aria-label="connect with us on our facebook-messenger">
+            <i class="fa-brands fa-facebook-messenger"></i>
+         </a>
+         <a class="media" href="#">
+            <i class="fa-brands fa-instagram" aria-label="connect with us on our IG story"></i>
+         </a>
+         <a class="media" href="http://www.youtube.com/@VisuaLottoBoard" target="_blank" aria-label="catch our videos on youtube">
+            <i class="fa-brands fa-youtube"></i>
+         </a>
+      </div>
+   </header>
   <nav id="subnav"></nav>
 
   <div id="statusMessage">Loading...</div>
