finanlized subnav link layout

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="/styles/tableStyles.css" />
-   <link rel="stylesheet" href="text-icon.css">
+   <!-- <link rel="stylesheet" href="text-icon.css"> -->
   
       <!-- email js -->
    
@@ -83,36 +83,39 @@
          <img class="counterpart-icon" src="https://res.cloudinary.com/ddatfadov/image/upload/v1751107320/iPhone-12-PRO-lottoclassificationchart.visuallottoboard.com_c7aj0w.png" alt="" width="">
       </a>
 
-      <div style="padding-bottom: 10rem;">
-         <a class="subnav-item" href="#"><span class="emoji-icon" role="img" aria-label="Diamond">💎</span><span>Diamond</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">👥</span><span>Peoples</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🚇</span><span>Metro</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🌍</span><span>International</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🪙</span><span>Gold</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">6️⃣</span><span>06</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🎰</span><span>Jackpot</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">♣️</span><span>Clubmaster</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">💥</span><span>Super</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🌀</span><span>Tota</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🛡️</span><span>Mark II</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🧩</span><span>Vag</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🏞️</span><span>Enugu</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🍀</span><span>Lucky</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">⚖️</span><span>Fairchance</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">♛</span><span>Royal</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">👑</span><span>Premier King</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">📅</span><span>Monday Special</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🍀🅖</span><span>Lucky-G</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">📆</span><span>Midweek</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">💰</span><span>Fortune</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🎉</span><span>Bonanza</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🏆</span><span>National</span></a>
-         <a class="subnav-item" href="#"><span class="game-icon">🙏</span><span>Aseda</span></a>
+      <div class="game-links-wrapper">
+         <a class="game-link" href="#"><span class="emoji-icon game-icon" role="img" aria-label="Diamond">💎</span><span>Diamond</span></a>
+         <a class="game-link" href="#"><span class="game-icon">👥</span><span>Peoples</span></a>
+         <a class="game-link" href="#">
+            <img src="https://cdn-icons-png.flaticon.com/512/2674/2674559.png" alt="Bingo Ball" class="game-icon" width="20"/>            <span>Bingo</span>
+         </a>
+         <a class="game-link game-link" href="#"><span class="game-icon">🚇</span><span>Metro</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🌍</span><span>International</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🪙</span><span>Gold</span></a>
+         <a class="game-link" href="#"><span class="game-icon">6️⃣</span><span>06</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🎰</span><span>Jackpot</span></a>
+         <a class="game-link" href="#"><span class="game-icon">♣️</span><span>Clubmaster</span></a>
+         <a class="game-link" href="#"><span class="game-icon">💥</span><span>Super</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🌀</span><span>Tota</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🛡️</span><span>Mark II</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🧩</span><span>Vag</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🏞️</span><span>Enugu</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🍀</span><span>Lucky</span></a>
+         <a class="game-link" href="#"><span class="game-icon">⚖️</span><span>Fairchance</span></a>
+         <a class="game-link" href="#"><span class="game-icon">♛</span><span>Royal</span></a>
+         <a class="game-link" href="#"><span class="game-icon">👑</span><span>Premier King</span></a>
+         <a class="game-link" href="#"><span class="game-icon">📅</span><span>Monday Special</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🍀🅖</span><span>Lucky-G</span></a>
+         <a class="game-link" href="#"><span class="game-icon">📆</span><span>Midweek</span></a>
+         <a class="game-link" href="#"><span class="game-icon">💰</span><span>Fortune</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🎉</span><span>Bonanza</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🏆</span><span>National</span></a>
+         <a class="game-link" href="#"><span class="game-icon">🙏</span><span>Aseda</span></a>
       </div>
    </nav>
    
    <div class="status-message" id="statusMessage">Loading results. Please wait...</div>
-   
+
    <main class="home-page-main" id="homePageContainer"></main>
 
    <div id="reportModal" class="modal hidden">
