added href  to subnav link

--- a/index.html
+++ b/index.html
@@ -84,8 +84,14 @@
       </a>
 
       <div class="game-links-wrapper">
-         <a class="game-link" href="#"><span class="emoji-icon game-icon" role="img" aria-label="Diamond">💎</span><span>Diamond</span></a>
-         <a class="game-link" href="#"><span class="game-icon">👥</span><span>Peoples</span></a>
+         <a class="game-link" href="/games/1diamond.html" target="_blank">
+            <span class="emoji-icon game-icon" role="img" aria-label="Diamond">💎</span>
+            <span>Diamond</span>
+         </a>
+         <a class="game-link" href="#">
+            <span class="game-icon">👥</span>
+            <span>Peoples</span>
+         </a>
          <a class="game-link" href="#">
             <img src="https://cdn-icons-png.flaticon.com/512/2674/2674559.png" alt="Bingo Ball" class="game-icon" width="20"/>            <span>Bingo</span>
          </a>
@@ -104,13 +110,31 @@
          <a class="game-link" href="#"><span class="game-icon">⚖️</span><span>Fairchance</span></a>
          <a class="game-link" href="#"><span class="game-icon">♛</span><span>Royal</span></a>
          <a class="game-link" href="#"><span class="game-icon">👑</span><span>Premier King</span></a>
-         <a class="game-link" href="#"><span class="game-icon">📅</span><span>Monday Special</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🍀🅖</span><span>Lucky-G</span></a>
-         <a class="game-link" href="#"><span class="game-icon">📆</span><span>Midweek</span></a>
-         <a class="game-link" href="#"><span class="game-icon">💰</span><span>Fortune</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🎉</span><span>Bonanza</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🏆</span><span>National</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🙏</span><span>Aseda</span></a>
+         <a class="game-link" href="/games/18msp.html">
+            <span class="game-icon">📅</span>
+            <span>Monday Special</span>
+         </a>
+         <a class="game-link" href="/games/19lucky-g.html" target="_blank">
+            <span class="game-icon">🍀🅖</span>
+            <span>Lucky-G</span>
+         </a>
+         <a class="game-link" href="/games/20midweek.html" target="_blank">
+            <span class="game-icon">📆</span>
+            <span>Midweek</span>
+         </a>
+         <a class="game-link" href="/games/21fortune.html" target="_blank">
+            <span class="game-icon">💰</span>
+            <span>Fortune</span>
+         </a>
+         <a class="game-link" href="/games/22bonanza.html">
+            <span class="game-icon">🎉</span>
+            <span>Bonanza</span></a>
+         <a class="game-link" href="/games/24national.html" target="_blank">
+            <span class="game-icon">🏆</span>
+            <span>National</span></a>
+         <a class="game-link" href="/games/25aseda.html" target="_blank">
+            <span class="game-icon">🙏</span>
+            <span>Aseda</span></a>
       </div>
    </nav>
    
