--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <!-- Google Tag Manager -->
+         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+         })(window,document,'script','dataLayer','GTM-54JWWN2R');</script>
+      <!-- End Google Tag Manager -->
+
+   
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Baba Ijebu Lotto Results | Visual Lotto Board</title>
@@ -32,8 +41,7 @@
    <link rel="stylesheet" href="/styles/tableStyles.css" />
    <!-- <link rel="stylesheet" href="text-icon.css"> -->
   
-      <!-- email js -->
-   
+   <!-- email js -->
    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
    <script type="text/javascript">
       (function(){
@@ -42,8 +50,15 @@
          });
       })();
    </script>
+   <!-- email js end-->
 </head>
 <body>
+      <!-- Google Tag Manager (noscript) -->
+         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!-- End Google Tag Manager (noscript) -->
+   
+   
    <header class="home-page-header" id="homePageHeader">
       <div class="brand">
          <a href="#" aria-current="page">
@@ -114,7 +129,7 @@
             <span class="game-icon">📅</span>
             <span>Monday Special</span>
          </a>
-         <a class="game-link" href="/games/19lucky-g.html" target="_blank">
+         <a class="game-link" href="/games/19luckyG.html" target="_blank">
             <span class="game-icon">🍀🅖</span>
             <span>Lucky-G</span>
          </a>
