--- a/games/18msp.html
+++ b/games/18msp.html
@@ -20,6 +20,11 @@
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="/styles/tableStyles.css" />
 
+  <style>
+      body {
+         text-align: center;
+      }
+  </style>
 </head>
 <body>
 
@@ -63,7 +68,7 @@
 
     <nav id="subnav"></nav>
 
-    <div id="statusMessage">Loading...</div>
+    <div class="status-message" id="statusMessage">Loading Monday Special results...</div>
     <main id="gameContainer"></main>
 
     <script type="module" src="/scripts/loaders/loadGame.js"></script>
