--- a/games/1diamond.html
+++ b/games/1diamond.html
@@ -20,6 +20,16 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="../style.css">
    <link rel="stylesheet" href="/styles/tableStyles.css" />
+
+   <style>
+      body {
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         text-align: center;
+      }
+     
+   </style>
 </head>
 <body>
 
@@ -63,7 +73,7 @@
 
     <nav id="subnav"></nav>
 
-    <div id="statusMessage">Loading Diamond results...</div>
+    <div class="status-message" id="statusMessage">Loading Diamond results...</div>
     <main id="gameContainer"></main>
 
     <script type="module" src="/scripts/loaders/loadGame.js"></script>
