--- a/games/20midweek.html
+++ b/games/20midweek.html
@@ -20,6 +20,12 @@
    <link rel="stylesheet" href="../style.css">
    <link rel="stylesheet" href="/styles/tableStyles.css" />
 
+   <style>
+      body {
+         text-align: center;
+      }
+     
+   </style>
 </head>
 <body>
 
@@ -63,7 +69,7 @@
    </header>
   <nav id="subnav"></nav>
 
-  <div id="statusMessage">Loading...</div>
+  <div class="status-message" id="statusMessage" aria-live="polite">Loading Midweek results...</div>
   <main id="gameContainer"></main>
 
   <script type="module" src="/scripts/loaders/loadGame.js"></script>
