--- a/games/25aseda.html
+++ b/games/25aseda.html
@@ -17,6 +17,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="/styles/tableStyles.css" />
+
+   <style>
+      body {
+         text-align: center;
+      }
+     
+   </style>
 </head>
 <body>
 
@@ -60,7 +67,7 @@
    </header>
   <nav id="subnav"></nav>
 
-  <div id="statusMessage">Loading...</div>
+  <div class="status-message" id="statusMessage" aria-live="polite">Loading Aseda results...</div>
   <main id="gameContainer"></main>
 
   <script type="module" src="/scripts/loaders/loadGame.js"></script>
