created the rest of the game files

--- a/index.html
+++ b/index.html
@@ -103,28 +103,27 @@
             <span class="emoji-icon game-icon" role="img" aria-label="Diamond">💎</span>
             <span>Diamond</span>
          </a>
-         <a class="game-link" href="#">
+         <a class="game-link" href="/games/2peoples.html" target="_blank">
             <span class="game-icon">👥</span>
             <span>Peoples</span>
          </a>
-         <a class="game-link" href="#">
-            <img src="https://cdn-icons-png.flaticon.com/512/2674/2674559.png" alt="Bingo Ball" class="game-icon" width="20"/>            <span>Bingo</span>
+         <a class="game-link" href="/games/3bingo.html" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/2674/2674559.png" alt="Bingo Ball" class="game-icon" width="20"/><span>Bingo</span>
          </a>
-         <a class="game-link game-link" href="#"><span class="game-icon">🚇</span><span>Metro</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🌍</span><span>International</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🪙</span><span>Gold</span></a>
-         <a class="game-link" href="#"><span class="game-icon">6️⃣</span><span>06</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🎰</span><span>Jackpot</span></a>
-         <a class="game-link" href="#"><span class="game-icon">♣️</span><span>Clubmaster</span></a>
-         <a class="game-link" href="#"><span class="game-icon">💥</span><span>Super</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🌀</span><span>Tota</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🛡️</span><span>Mark II</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🧩</span><span>Vag</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🏞️</span><span>Enugu</span></a>
-         <a class="game-link" href="#"><span class="game-icon">🍀</span><span>Lucky</span></a>
-         <a class="game-link" href="#"><span class="game-icon">⚖️</span><span>Fairchance</span></a>
-         <a class="game-link" href="#"><span class="game-icon">♛</span><span>Royal</span></a>
-         <a class="game-link" href="#"><span class="game-icon">👑</span><span>Premier King</span></a>
+         <a class="game-link game-link" href="/games/4metro.html" target="_blank"><span class="game-icon">🚇</span><span>Metro</span></a>
+         <a class="game-link" href="/games/5inter.html" target="_blank"><span class="game-icon">🌍</span><span>International</span></a>
+         <a class="game-link" href="/games/6gold.html" target="_blank"><span class="game-icon">🪙</span><span>Gold</span></a>
+         <a class="game-link" href="/games/7O6.html" target="_blank"><span class="game-icon">6️⃣</span><span>06</span></a>
+         <a class="game-link" href="/games/8jackpot.html" target="_blank"><span class="game-icon">🎰</span><span>Jackpot</span></a>
+         <a class="game-link" href="/games/9clubmaster.html" target="_blank"><span class="game-icon">♣️</span><span>Clubmaster</span></a>
+         <a class="game-link" href="/games/10super.html" target="_blank"><span class="game-icon">💥</span><span>Super</span></a>
+         <a class="game-link" href="/games/11tota.html" target="_blank"><span class="game-icon">🌀</span><span>Tota</span></a>
+         <a class="game-link" href="/games/12mark-II.html" target="_blank"><span class="game-icon">🛡️</span><span>Mark II</span></a>
+         <a class="game-link" href="/games/13vag.html" target="_blank"><span class="game-icon">🧩</span><span>Vag</span></a>
+         <a class="game-link" href="/games/14enugu.html" target="_blank"><span class="game-icon">🏞️</span><span>Enugu</span></a>
+         <a class="game-link" href="/games/15lucky.html" target="_blank"><span class="game-icon">🍀</span><span>Lucky</span></a>
+         <a class="game-link" href="/games/16fairchance.html" target="_blank"><span class="game-icon">⚖️</span><span>Fairchance</span></a>
+         <a class="game-link" href="/games/17royal.html" target="_blank"><span class="game-icon">♛</span><span>Royal</span></a>
          <a class="game-link" href="/games/18msp.html">
             <span class="game-icon">📅</span>
             <span>Monday Special</span>
@@ -143,13 +142,17 @@
          </a>
          <a class="game-link" href="/games/22bonanza.html">
             <span class="game-icon">🎉</span>
-            <span>Bonanza</span></a>
+            <span>Bonanza</span>
+         </a>
+         <a class="game-link" href="/games/23premierking.html" target="_blank"><span class="game-icon">👑</span><span>Premier King</span></a>
          <a class="game-link" href="/games/24national.html" target="_blank">
             <span class="game-icon">🏆</span>
-            <span>National</span></a>
+            <span>National</span>
+         </a>
          <a class="game-link" href="/games/25aseda.html" target="_blank">
             <span class="game-icon">🙏</span>
-            <span>Aseda</span></a>
+            <span>Aseda</span>
+         </a>
       </div>
    </nav>
    
