--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
    <div class="first-time-banner hidden" id="firstTimeBanner">
       🎉 Welcome to Visual Lotto Board! Your results will appear once you're able to prove you are human and not a bot. <!-- signed up and authenticated.-->
-      <button class="close-banner-btn" onclick="document.getElementById('firstTimeBanner').classList.add('hidden')">✖</button>
+      <button class="close-banner-btn">✖</button>
    </div>
 
 
