--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
       </div>
    </div>
 
+   <script src="utils/verifyUser.js"></script>
    <script type="module" src="/scripts/homeInit.js"></script>
    <script src="/scripts/modal.js"></script>
 </body>
