--- a/index.html
+++ b/index.html
@@ -164,9 +164,7 @@
    
    <div class="status-message" id="statusMessage">Loading results. Please wait...</div>
 
-   <main class="home-page-main" id="homePageContainer">
-      
-   </main>
+   <main class="home-page-main" id="homePageContainer"></main>
 
    <div id="reportModal" class="modal hidden">
       <div class="modal-content">
@@ -189,36 +187,31 @@
          </div>
       </div>
    </div>
-   <div id="loading-message">Checking your session…</div>
-<div id="bot-message" style="display:none;">
-  🤖 Sorry, bot access isn’t allowed.<br>
-  If you're human (and lucky), sign in here to unlock your game results.
-</div>
-<div id="results-container" style="display:none;">
-  <!-- Game results here -->
-</div>
 
-<script>
-  fetch("https://auth.visuallottoboard.com/verifySession", {
-    method: "GET",
-    credentials: "include"
-  }).then(res => {
-    document.getElementById("loading-message").style.display = "none";
-    
-    if (res.status === 200) {
-      document.getElementById("results-container").style.display = "block";
-    } else {
-      document.getElementById("bot-message").style.display = "block";
-    }
-  }).catch(err => {
-    console.error("Session verification failed:", err);
-    document.getElementById("loading-message").style.display = "none";
-    document.getElementById("bot-message").style.display = "block";
-  });
-</script>
+   <!-- <script src="utils/verifyUser.js"></script> -->
+   <script>
+      async function verifySession() {
+         try {
+            const response = await fetch("https://auth.visuallottoboard.com/verifySession", {
+               method: "GET",
+               credentials: "include"
+            });
 
+            if (response.status === 200) {
+               const user = await response.json();
+               console.log("✅ Session verified:", user);
+               // Optionally show user name, email, etc.
+            } else {
+               throw new Error("Invalid session");
+            }
+         } catch (error) {
+            console.warn("Session check failed:", error);
+            console.log("Cookies:", document.cookie);
+         }
+      }
 
-   
+      verifySession();
+   </script>
    <script type="module" src="/scripts/homeInit.js"></script>
    <script src="/scripts/modal.js"></script>
 </body>
