--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
    </div>
 
    <script type="module" src="/scripts/homeInit.js"></script>
-   <script src="/scripts/firebase.js"></script>
+   <script type="module" src="/scripts/firebase.js"></script>
    <script src="/scripts/modal.js"></script>
 </body>
 </html>
