correct firebase source for doc

--- a/index.html
+++ b/index.html
@@ -158,10 +158,9 @@
    </nav>
    
    <div class="status-message" id="statusMessage">Loading results. Please wait...</div>
+   <div class="update-meta" id="updateInfo" class="update-meta"></div>  
 
-   <main class="home-page-main" id="homePageContainer">
-      <div class="update-meta" id="updateInfo" class="update-meta"></div>  
-   </main>
+   <main class="home-page-main" id="homePageContainer"></main>
 
    <div id="reportModal" class="modal hidden">
       <div class="modal-content">
