--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
    </nav>
    
    <div class="status-message" id="statusMessage">Loading results. Please wait...</div>
-   <div class="update-meta" id="updateInfo"></div>  
+   <div class="update-meta" id="infoContainer"></div>  
 
    <main class="home-page-main" id="homePageContainer"></main>
 
