--- a/games/14enugu.html
+++ b/games/14enugu.html
@@ -14,8 +14,8 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   <title>Enugu Results - BabaIjebu</title>
-   <meta name="description" content="Live draw results for Diamond lotto game. Updated weekly via Visual Lotto Board.">
+   <title>Enugu BabaIjebu Results | Visual Lotto Board</title>
+   <meta name="description" content="Live draw results for Enugu lotto game. Updated weekly via Visual Lotto Board.">
   
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
    <link rel="stylesheet" href="../style.css">
