reoder nav on small screen and modify games description

--- a/games/25aseda.html
+++ b/games/25aseda.html
@@ -9,14 +9,15 @@
          })(window,document,'script','dataLayer','GTM-54JWWN2R');</script>
       <!-- End Google Tag Manager -->
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Aseda BabaIjebu Results | Visual Lotto Board</title>
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="/styles/tableStyles.css" />
+   <title>Aseda BabaIjebu Results | Visual Lotto Board</title>
+   <meta name="description" content="Live BabaIjebu draw results for ASEDA lotto game.">
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+   <link rel="stylesheet" href="../style.css">
+   <link rel="stylesheet" href="/styles/tableStyles.css" />
 
    <style>
       body {
