--- a/games/24national.html
+++ b/games/24national.html
@@ -10,13 +10,15 @@
       <!-- End Google Tag Manager -->
 
       
-  <meta charset="UTF-8" />
-  <title>National BabaIjebu Results | Visual Lotto Board</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta charset="UTF-8" />
+   <title>National BabaIjebu Results | Visual Lotto Board</title>
+   <meta name="description" content="Live BabaIjebu draw results for MONDAY SPECIAL lotto game.">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="/styles/tableStyles.css" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+   <link rel="stylesheet" href="../style.css">
+   <link rel="stylesheet" href="/styles/tableStyles.css" />
 
    <style>
       body {
