testing game name with spam

--- a/games/1diamond.html
+++ b/games/1diamond.html
@@ -71,11 +71,12 @@
       </div>
     </header>
 
-    <nav id="subnav"></nav>
+    <nav class="subnav" id="subnav"></nav>
 
     <div class="status-message" id="statusMessage">Loading Diamond results...</div>
     <main id="gameContainer"></main>
 
     <script type="module" src="/scripts/loaders/loadGame.js"></script>
+    <script src="../scripts/modal.js"></script>
 </body>
 </html>
