--- a/games/5inter.html
+++ b/games/5inter.html
@@ -77,5 +77,7 @@
     <main id="gameContainer"></main>
 
     <script type="module" src="/scripts/loaders/loadGame.js"></script>
+   <script src="../scripts/modal.js"></script>
+
 </body>
 </html>
